Bug 437217 - Kalarm can't find my sound files (despite there are here and .ogg)
Summary: Kalarm can't find my sound files (despite there are here and .ogg)
Status: RESOLVED FIXED
Alias: None
Product: kalarm
Classification: Applications
Component: sound (other bugs)
Version First Reported In: unspecified
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: David Jarvie
URL:
Keywords:
: 451172 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-16 21:16 UTC by cecilel@lavache.com
Modified: 2022-03-06 00:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cecilel@lavache.com 2021-05-16 21:16:07 UTC
Hi, I am using Kalarm Version 2.13.3(KDE Apps 19.12.3) (not available in the list) on Linux Mint 20.1 Ulyssa with desktop Xfce 4.14.2

I just installed it, and want to add some sound file, but it doesn't found and file, despite the presence of .ogg files in my repertory, it doesn't display anything.
If I try to type the name of the .ogg file directly, the "open" button stay unavailable.

Alos, not sure this is related, but if I push the "try" button once an alarm is set, it only display the text, no sound, even with the "bip" default setting.

Is that because I am on xfce and need some additional package ? then, which one ?


STEPS TO REPRODUCE
1. Launche KDE and create an alarm
2. Try to add a sound file, it opens the search for the file
3. Go in my .ogg file directory and.... no file found, despite they are here.

OBSERVED RESULT

My .ogg files are not detected, and if I manually put the path to one, I can't select it.

EXPECTED RESULT
Kalarm finding my sound files so I can use them.


SOFTWARE/OS VERSIONS
Kalarm Version 2.13.3(KDE Apps 19.12.3)
Linux Mint 20.1 Ulyssa with desktop Xfce 4.14.2
Linux (x86_64) release 5.4.0-73-generic

ADDITIONAL INFORMATION

I installed it via the software manage in Linux Mint, maybe a KDE package is missing ?
Comment 1 David Jarvie 2021-08-01 21:41:26 UTC
Git commit 53664663c3c7fd98ab3bf3a5294cb96f6b114623 by David Jarvie.
Committed on 01/08/2021 at 21:33.
Pushed by djarvie into branch 'release/21.08'.

Bug 437217: Fix 'Choose sound file' dialog showing no audio files

Under XFCE etc., it was impossible to show or even type the names
of audio files in order to select them. This was due to QFileDialog
filters acting differently under different desktops.

M  +2    -1    Changelog
M  +3    -3    src/editdlgtypes.cpp
M  +15   -3    src/lib/file.cpp
M  +10   -2    src/lib/file.h
M  +21   -4    src/soundpicker.cpp

https://invent.kde.org/pim/kalarm/commit/53664663c3c7fd98ab3bf3a5294cb96f6b114623
Comment 2 David Jarvie 2021-08-01 21:44:54 UTC
This fix will be in KAlarm version 3.3.0, which will be in the KDE apps 21.08 release.
Comment 3 David Jarvie 2022-03-06 00:39:26 UTC
*** Bug 451172 has been marked as a duplicate of this bug. ***