Bug 437217: Fix 'Choose sound file' dialog showing no audio files

Under XFCE etc., it was impossible to show or even type the names
of audio files in order to select them. This was due to QFileDialog
filters acting differently under different desktops.

BUG:437217